Fixed bug #76947 file_put_contents() blocks the directory of the file (__DIR__)

The condition was wrong. The target buffer size only matters, when some
output is going to be copied into it.